--- a/densityflight.html
+++ b/densityflight.html
@@ -8,9 +8,8 @@ td {border:1px solid MistyRose;background-color:AliceBlue;}
 
 <body><h1>--- Rachel Alcraft, Bioinformatics ---</h1>
 <hr/>
-<body><h2>Notes on how to cite this work</h2>
-At the moment, simply refer to the website<br/><br/>
-Alcraft, R.S (November 2020). Bioinformatics Code. https://rachelalcraft.github.io
+<body><h2>Density Flight</h2>
+
 
 <hr/><p>Contact Rachel Alcraft by email, 
 <a href="mailto:rachelalcraft@gmail.com">(Rachel's email)</a></br>
