--- a/psugeometry.html
+++ b/psugeometry.html
@@ -6,11 +6,10 @@ table {font-size:0.8vw;width:95%;table-layout:fixed;display:table;margin:0 auto;
 td {border:1px solid MistyRose;background-color:AliceBlue;}
 </style></head>
 
-<body><h1>--- Rachel Alcraft, Bioinformatics ---</h1>
+<body><h1>*** Rachel Alcraft, Bioinformatics ***</h1>
 <hr/>
-<body><h2>Notes on how to cite this work</h2>
-At the moment, simply refer to the website<br/><br/>
-Alcraft, R.S (November 2020). Bioinformatics Code. https://rachelalcraft.github.io
+<body><h2>* PsuGeometry</h2>
+
 
 <hr/><p>Contact Rachel Alcraft by email, 
 <a href="mailto:rachelalcraft@gmail.com">(Rachel's email)</a></br>
