--- a/psugeometry.html
+++ b/psugeometry.html
@@ -6,9 +6,9 @@ table {font-size:0.8vw;width:95%;table-layout:fixed;display:table;margin:0 auto;
 td {border:1px solid MistyRose;background-color:AliceBlue;}
 </style></head>
 
-<body><h1>*** Rachel Alcraft, Bioinformatics ***</h1>
+<body><h1>--- Rachel Alcraft, Bioinformatics ---</h1>
 <hr/>
-<body><h2>* PsuGeometry</h2>
+<body><h2>PsuGeometry</h2>
 
 
 <hr/><p>Contact Rachel Alcraft by email, 
