--- a/citing.html
+++ b/citing.html
@@ -7,6 +7,7 @@ td {border:1px solid MistyRose;background-color:AliceBlue;}
 </style></head>
 
 <body><h1>--- Rachel Alcraft, Bioinformatics ---</h1>
+<hr/><p><a href='Index.html' title='Home' target='_self'>Home</a> - Citing</p>
 <hr/>
 <body><h2>Notes on how to cite this work</h2>
 At the moment, simply refer to the website<br/><br/>
