--- a/psubirkbeck.html
+++ b/psubirkbeck.html
@@ -7,7 +7,7 @@ td {border:1px solid MistyRose;background-color:AliceBlue;}
 </style></head>
 
 <body><h1>--- Rachel Alcraft, Bioinformatics ---</h1>
-<hr/><p><a href='Index.html' title='Home' target='_self'>Home</a> - PsuBirkbeck</p>
+<hr/><p><a href='index.html' title='Home' target='_self'>Home</a> - PsuBirkbeck</p>
 
 <hr/>
 <body><h2>PsuGeometry</h2>
