Added Flight Screen

--- a/densityflight.html
+++ b/densityflight.html
@@ -10,6 +10,7 @@ td {border:1px solid MistyRose;background-color:AliceBlue;}
 <hr/><p><a href='index.html' title='Home' target='_self'>Home</a> - DensityFlight</p>
 <hr/>
 <body><h2>Density Flight</h2>
+<img src="DensityFlight/examples/1us0screen.png" alt="Density Flight Screen">
 
 
 <hr/><p>Contact Rachel Alcraft by email, 
