--- a/psugeometry.html
+++ b/psugeometry.html
@@ -11,6 +11,7 @@ td {border:1px solid MistyRose;background-color:AliceBlue;}
 <hr/>
 <body><h2>PsuGeometry</h2>
 
+<a href='install/publish.htm' title='Density Flight' target='_blank'>Install Density Flight</a><br/>
 
 <hr/><p>Contact Rachel Alcraft by email, 
 <a href="mailto:rachelalcraft@gmail.com">(Rachel's email)</a></br>
