Wrong place for install

--- a/densityflight.html
+++ b/densityflight.html
@@ -10,6 +10,9 @@ td {border:1px solid MistyRose;background-color:AliceBlue;}
 <hr/><p><a href='index.html' title='Home' target='_self'>Home</a> - DensityFlight</p>
 <hr/>
 <body><h2>Density Flight</h2>
+<hr/>
+<a href='install/publish.htm' title='Density Flight' target='_blank'>Install Density Flight</a><br/>
+<hr/>
 <img src="DensityFlight/examples/1us0screen.png" alt="Density Flight Screen">
 
 
