--- a/densityflight.html
+++ b/densityflight.html
@@ -11,7 +11,8 @@ td {border:1px solid MistyRose;background-color:AliceBlue;}
 <hr/>
 <body><h2>Density Flight</h2>
 <hr/>
-<a href='install/publish.htm' title='Density Flight' target='_blank'>Install Density Flight</a><br/>
+<p>Currently, Density Flight is available for Windows 10 machines only</p><br/>
+<a href='DensityFlight/install/publish.htm' title='Density Flight' target='_blank'>Install Density Flight</a><br/>
 <hr/>
 <img src="DensityFlight/examples/1us0screen.png" alt="Density Flight Screen">
 
