--- a/densityflight.html
+++ b/densityflight.html
@@ -7,11 +7,10 @@ td {border:1px solid MistyRose;background-color:AliceBlue;}
 </style></head>
 
 <body><h1>--- Rachel Alcraft, Bioinformatics ---</h1>
-<hr/><p><a href='index.html' title='Home' target='_self'>Home</a> - DensityFlight</p>
-<hr/>
+<p style="background-color:tomato;"><a href='index.html' title='Home' target='_self'>Home</a> - DensityFlight</p>
 <body><h2>Density Flight</h2>
 <hr/>
-<p>Currently, Density Flight is available for Windows 10 machines only</p><br/>
+<p>Currently, Density Flight is available for Windows 10 machines only. </p>
 <a href='DensityFlight/install/publish.htm' title='Density Flight' target='_blank'>Install Density Flight</a><br/>
 <hr/>
 <img src="DensityFlight/examples/1us0screen.png" alt="Density Flight Screen">
