--- a/densityflight.html
+++ b/densityflight.html
@@ -12,6 +12,9 @@ td {border:1px solid MistyRose;background-color:AliceBlue;}
 <hr/>
 <p>Currently, Density Flight is available for Windows 10 machines only. </p>
 <a href='DensityFlight/install/publish.htm' title='Density Flight' target='_blank'>Install Density Flight</a><br/>
+<p>Note that as this is not an official app the installation requires you to keep telling the computer you don;t mind installing it and it isn't a virus. 
+Whenever it suggests you "discard" or "don't run" look for the drop down arrow nearby that allows you to keep or run. 
+If you have a virus software running like AVG it will probably block the install. </p>
 <hr/>
 <img src="DensityFlight/examples/1us0screen.png" alt="Density Flight Screen">
 
