--- a/densityflight.html
+++ b/densityflight.html
@@ -10,11 +10,7 @@ td {border:1px solid MistyRose;background-color:AliceBlue;}
 <p style="background-color:tomato;"><a href='index.html' title='Home' target='_self'>Home</a> - DensityFlight</p>
 <body><h2>Density Flight</h2>
 <hr/>
-<p>Currently, Density Flight is available for Windows 10 machines only. </p>
-<a href='DensityFlight/install/publish.htm' title='Density Flight' target='_blank'>Install Density Flight</a><br/>
-<p>Note that as this is not an official app the installation requires you to keep telling the computer you don;t mind installing it and it isn't a virus. 
-Whenever it suggests you "discard" or "don't run" look for the drop down arrow nearby that allows you to keep or run. 
-If you have a virus software running like AVG it will probably block the install. </p>
+<p>Currently, Density Flight is available for Windows 10 machines only. For access to the software,  <a href="mailto:rachelalcraft@gmail.com">email me a request.</a></p>
 <hr/>
 <img src="DensityFlight/examples/1us0screen.png" alt="Density Flight Screen">
 
