--- a/citing.html
+++ b/citing.html
@@ -7,17 +7,17 @@ td {border:1px solid MistyRose;background-color:AliceBlue;}
 </style></head>
 
 <body><h1>--- Rachel Alcraft, Bioinformatics ---</h1>
-<hr/><p><a href='index.html' title='Home' target='_self'>Home</a> - Citing</p>
-<hr/>
-<body><h2>Notes on how to cite this work</h2>
+<p style="background-color:tomato;"><a href='index.html' title='Home' target='_self'>Home</a> - Citing</p><hr/>
+
+<h2>Notes on how to cite this work</h2>
 At the moment, simply refer to the website<br/><br/>
 Alcraft, R.S (November 2020). Bioinformatics Code. https://rachelalcraft.github.io
 
-<hr/><p>Contact Rachel Alcraft by email, 
-<a href="mailto:rachelalcraft@gmail.com">(Rachel's email)</a></br>
-Return to Rachel's home page - 
-<a href='https://rachelalcraft.github.io' title='rachelalcraft.github.io' target='_self'>rachelalcraft.github.io</a><br/>
-For notes on citations for this work <a href="citing.html">click here</a></br>
+<hr/><p style="background-color:tomato;">Contact Rachel by 
+<a href="mailto:rachelalcraft@gmail.com"> email.</a>
+- Return to Rachel's
+<a href='https://rachelalcraft.github.io' title='rachelalcraft.github.io' target='_self'>home page</a> - 
+Notes on citations <a href="citing.html">here</a></br>
 </p>
 <hr/>
 </body>
