--- a/densityflight.html
+++ b/densityflight.html
@@ -7,19 +7,19 @@ td {border:1px solid MistyRose;background-color:AliceBlue;}
 </style></head>
 
 <body><h1>--- Rachel Alcraft, Bioinformatics ---</h1>
-<p style="background-color:tomato;"><a href='index.html' title='Home' target='_self'>Home</a> - DensityFlight</p>
-<body><h2>Density Flight</h2>
+<p style="background-color:tomato;"><a href='index.html' title='Home' target='_self'>Home</a> - DensityFlight</p><hr/>
+<h2>Density Flight</h2>
 <hr/>
 <p>Currently, Density Flight is available for Windows 10 machines only. For access to the software,  <a href="mailto:rachelalcraft@gmail.com">email me a request.</a></p>
 <hr/>
 <img src="DensityFlight/examples/1us0screen.png" alt="Density Flight Screen">
 
 
-<hr/><p>Contact Rachel Alcraft by email, 
-<a href="mailto:rachelalcraft@gmail.com">(Rachel's email)</a></br>
-Return to Rachel's home page - 
-<a href='https://rachelalcraft.github.io' title='rachelalcraft.github.io' target='_self'>rachelalcraft.github.io</a><br/>
-For notes on citations for this work <a href="citing.html">click here</a></br>
+<hr/><p style="background-color:tomato;">Contact Rachel by 
+<a href="mailto:rachelalcraft@gmail.com"> email.</a>
+- Return to Rachel's
+<a href='https://rachelalcraft.github.io' title='rachelalcraft.github.io' target='_self'>home page</a> - 
+Notes on citations <a href="citing.html">here</a></br>
 </p>
 <hr/>
 </body>
