--- a/psugeometry.html
+++ b/psugeometry.html
@@ -9,6 +9,31 @@ td {border:1px solid MistyRose;background-color:AliceBlue;}
 <body><h1>--- Rachel Alcraft, Bioinformatics ---</h1>
 <p style="background-color:tomato;"><a href='index.html' title='Home' target='_self'>Home</a> - PsuGeometry</p><hr/>
 <h2>PsuGeometry</h2>
+<hr/><h3>Installation</h3>
+<p>
+</p>
+<hr/><h3>Running reports: level 1 (easy)</h3>
+<p>
+</p>
+<hr/><h3>Running reports: level 2 (advanced)</h3>
+<p>
+</p>
+<hr/><h3>Running reports: level 3 (expert)</h3>
+<p>
+</p>
+<hr/><h3>Class library and code documentation</h3>
+<p>
+</p>
+<hr/><h3>Examples of reports</h3>
+<ul>
+<li><a href="PsuGeometry/examples/1tt8_rae.html">Correlation reports</li>
+<li><a href="PsuGeometry/examples/PSU-tau-GEO.html">Bimodal Tau example for each amino acid individually</a></li>
+<li><a href="PsuGeometry/examples/PSU-2cnq_bad-GEO.html">Correlation reports show structure with suspicious geoemtry</a></li>
+<li><a href="PsuGeometry/examples/PSU-2cnq_procheck1-GEO.html">Above structure with reports that match ProCheck</a></li>
+<li><a href="PsuGeometry/examples/PSU-1ejg_denpt_1ejg-GEO.html">Looking at the electron density against geoemtry and coordinates part 1</a></li>
+<li><a href="PsuGeometry/examples/PSU-5nqo_data_5nqo-GEO.html">Looking at the electron density against geoemtry and coordinates part 2</a></li>
+</ul>
+</p>
 
 <hr/><p style="background-color:tomato;">Contact Rachel by 
 <a href="mailto:rachelalcraft@gmail.com"> email.</a>
