--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@ table {font-size:0.8vw;width:95%;table-layout:fixed;display:table;margin:0 auto;
 td {border:1px solid MistyRose;background-color:AliceBlue;}
 </style></head>
 
+
+
 <body><h1>--- Rachel Alcraft, Bioinformatics ---</h1>
 <p style="background-color:tomato;">Home</p>
 <h1>Bioinformatics Code</h1>
 <p>These projects have been developed as a result of studying Bioinformatics at Birkbeck College, UK</p>
 <hr/>
 <h2>Protein Structure Utility - Birkbeck MSc</h2>
-<p>This website and database was developed as part of an MSc thesis in Bioinformatics and Systems Biology (2020), supervisor Mark A Williams.<br/>
+<p>This website and database was developed as part of an MSc thesis in Bioinformatics and Systems Biology (2020), supervisor <a href="http://people.cryst.bbk.ac.uk/~ubcg66a/">Mark Williams</a><br/>
 The database contains 3434 high resolution structures with resolution <= 1.3Å and 2697 structures from 2019 > 1.3Å<br/>
 The website allows production of geometric plots and statistical analyses using these structures and selected criteria. <br/>
 A highlight is the demonstration of the <a href="PsuBirkbeck/examples/bimodaltau.html">bimodal nature of tau.</a></br></br>
