--- a/index.html
+++ b/index.html
@@ -30,18 +30,26 @@ The Website hosted on the Birkbeck College servers is <a href="https://student.c
 secondary structure information from dssp and the electron density information from ccp4 files where available.
 The images produced range from a simple Ramachandran plot than can be coloured on for example secondary structure, 
 electron density or B-Factor, to say, a correlation of number of electrons against B-Factor.
-The library contains some pre-created reports so the code to create seom fairly involved reports is minimal.<br/><br/>
+The library contains some pre-defined reports so the code to create some fairly involved reports is minimal.<br/><br/>
 PsuGeometry help and documentation is <a href="psugeometry.html">here</a></br>
 </p>
 <p>Some examples produced by the library are below:
 <ul>
-<li><a href="PsuGeometry/examples/PSU-1tt8_rae-GEO.html">Correlation reports</li>
+<li><a href="PsuGeometry/examples/PSU-1tt8_rae-GEO.html">Correlation reports</a></li>
 <li><a href="PsuGeometry/examples/PSU-tau-GEO.html">Bimodal Tau example for each amino acid individually</a></li>
 <li><a href="PsuGeometry/examples/PSU-2cnq_bad-GEO.html">Correlation reports show structure with suspicious geoemtry</a></li>
 <li><a href="PsuGeometry/examples/PSU-2cnq_procheck1-GEO.html">Above structure with reports that match ProCheck</a></li>
 <li><a href="PsuGeometry/examples/PSU-1ejg_denpt_1ejg-GEO.html">Looking at the electron density against geoemtry and coordinates part 1</a></li>
 <li><a href="PsuGeometry/examples/PSU-5nqo_data_5nqo-GEO.html">Looking at the electron density against geoemtry and coordinates part 2</a></li>
 </ul>
+<p>
+The library relies on these Bioinformatics librararies:
+<ul>
+<li><a href="https://biopython.org/">BioPython</a> for protein structure coordinates</li>
+<li><a href="https://pdb-eda.readthedocs.io/en/latest/tutorial.html">PDB EDA</a> for loading the electron density</li>
+<li><a href="https://ssbio.readthedocs.io/en/latest/instructions/dssp.html">DSSP</a> for asigning secondary structure</li>
+</ul>
+</p>
 </p>
 <hr/>
 <h2>PsuDensity</h2>
