--- a/psugeometry.html
+++ b/psugeometry.html
@@ -26,14 +26,23 @@ td {border:1px solid MistyRose;background-color:AliceBlue;}
 </p>
 <hr/><h3>Examples of reports</h3>
 <ul>
-<li><a href="PsuGeometry/examples/PSU-1tt8_rae-GEO.html">Correlation reports</li>
+<li><a href="PsuGeometry/examples/PSU-1tt8_rae-GEO.html">Correlation reports</a></li>
 <li><a href="PsuGeometry/examples/PSU-tau-GEO.html">Bimodal Tau example for each amino acid individually</a></li>
 <li><a href="PsuGeometry/examples/PSU-2cnq_bad-GEO.html">Correlation reports show structure with suspicious geoemtry</a></li>
 <li><a href="PsuGeometry/examples/PSU-2cnq_procheck1-GEO.html">Above structure with reports that match ProCheck</a></li>
 <li><a href="PsuGeometry/examples/PSU-1ejg_denpt_1ejg-GEO.html">Looking at the electron density against geoemtry and coordinates part 1</a></li>
 <li><a href="PsuGeometry/examples/PSU-5nqo_data_5nqo-GEO.html">Looking at the electron density against geoemtry and coordinates part 2</a></li>
 </ul>
+<p>
+The library relies on these Bioinformatics librararies:
+<ul>
+<li><a href="https://biopython.org/">BioPython</a> for protein structure coordinates</li>
+<li><a href="https://pdb-eda.readthedocs.io/en/latest/tutorial.html">PDB EDA</a> for loading the electron density</li>
+<li><a href="https://ssbio.readthedocs.io/en/latest/instructions/dssp.html">DSSP</a> for asigning secondary structure</li>
+</ul>
 </p>
+</p>
+<hr/>
 
 <hr/><p style="background-color:tomato;">Contact Rachel by 
 <a href="mailto:rachelalcraft@gmail.com"> email.</a>
