Added some examples

--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@ td {border:1px solid MistyRose;background-color:AliceBlue;}
 
 
 <body><h1>--- Rachel Alcraft, Bioinformatics ---</h1>
-<p style="background-color:tomato;">Home</p>
+<p style="background-color:tomato;">
+   <a href='index.html' title='Home' target='_self'>Home</a>
+~ <a href='citing.html' title='Citing' target='_self'>Citing</a>
+~ <a href='psubirkbeck.html' title='PsuBirkbeck' target='_self'>PsuBirkbeck</a>
+~ <a href='psugeometry.html' title='PsuGeometry' target='_self'>PsuGeometry</a>
+~ <a href='psudensity.html' title='PsuDensity' target='_self'>PsuDensity</a>
+~ <a href='densityflight.html' title='DensityFlight' target='_self'>DensityFlight</a>
+</p>
+
 <h1>Bioinformatics Code</h1>
 <p>These projects have been developed as a result of studying Bioinformatics at Birkbeck College, UK</p>
 <hr/>
@@ -36,7 +44,9 @@ PsuGeometry help and documentation is <a href="psugeometry.html">here</a></br>
 <p>Some examples produced by the library are below:
 <ul>
 <li><a href="PsuGeometry/examples/PSU-1tt8_rae-GEO.html">Correlation reports</a></li>
-<li><a href="PsuGeometry/examples/PSU-tau-GEO.html">Bimodal Tau example for each amino acid individually</a></li>
+<li><a href="PsuGeometry/examples/PSU-5nqo_close-GEO.html">Contact Maps</a></li>
+<li><a href="PsuGeometry/examples/PSU-1000-GEO.html">1000 Structures</a></li>
+<li><a href="PsuGeometry/examples/PSU-tau-GEO.html">Bimodal Tau example for each amino acid</a></li>
 <li><a href="PsuGeometry/examples/PSU-2cnq_bad-GEO.html">Correlation reports show structure with suspicious geoemtry</a></li>
 <li><a href="PsuGeometry/examples/PSU-2cnq_procheck1-GEO.html">Above structure with reports that match ProCheck</a></li>
 <li><a href="PsuGeometry/examples/PSU-1ejg_denpt_1ejg-GEO.html">Looking at the electron density against geoemtry and coordinates part 1</a></li>
