--- a/psubirkbeck.html
+++ b/psubirkbeck.html
@@ -7,7 +7,14 @@ td {border:1px solid MistyRose;background-color:AliceBlue;}
 </style></head>
 
 <body><h1>--- Rachel Alcraft, Bioinformatics ---</h1>
-<p style="background-color:tomato;"><a href='index.html' title='Home' target='_self'>Home</a> - PsuBirkbeck</p><hr/>
+<p style="background-color:tomato;">
+   <a href='index.html' title='Home' target='_self'>Home</a>
+~ <a href='citing.html' title='Citing' target='_self'>Citing</a>
+~ <a href='psubirkbeck.html' title='PsuBirkbeck' target='_self'>PsuBirkbeck</a>
+~ <a href='psugeometry.html' title='PsuGeometry' target='_self'>PsuGeometry</a>
+~ <a href='psudensity.html' title='PsuDensity' target='_self'>PsuDensity</a>
+~ <a href='densityflight.html' title='DensityFlight' target='_self'>DensityFlight</a>
+</p>
 
 <h2>PSU Birkbeck</h2>
 
