--- a/psudensity.html
+++ b/psudensity.html
@@ -7,8 +7,26 @@ td {border:1px solid MistyRose;background-color:AliceBlue;}
 </style></head>
 
 <body><h1>--- Rachel Alcraft, Bioinformatics ---</h1>
-<p style="background-color:tomato;"><a href='index.html' title='Home' target='_self'>Home</a> - PsuDensity</p><hr/>
+<p style="background-color:tomato;">
+   <a href='index.html' title='Home' target='_self'>Home</a>
+~ <a href='citing.html' title='Citing' target='_self'>Citing</a>
+~ <a href='psubirkbeck.html' title='PsuBirkbeck' target='_self'>PsuBirkbeck</a>
+~ <a href='psugeometry.html' title='PsuGeometry' target='_self'>PsuGeometry</a>
+~ <a href='psudensity.html' title='PsuDensity' target='_self'>PsuDensity</a>
+~ <a href='densityflight.html' title='DensityFlight' target='_self'>DensityFlight</a>
+</p>
+
 <h2>PsuDensity</h2>
+<p>
+The PsuDensity library is under research and development currently and not publicly available. Below are a few of the reports produced by the library.
+<hr/><h3>Examples of reports</h3>
+<ul>
+<li><a href="PsuDensity/examples/PSU-1ejglinear_overlay-GEO.html">Density and Difference overlay - peptide bond</a></li>
+<li><a href="PsuDensity/examples/PSU-1ejg_spline_derivative-GEO.html">Density and 2nd derivative overlay - peptide bond</a></li>
+<li><a href="PsuDensity/examples/PSU-1us0_spline_TYR3degree-GEO.html">Density, 1st and 2nd derivatives, TYR rings</a></li>
+<li><a href="PsuDensity/examples/PSU-2cnq_interps-GEO.html">Comparing interpolation methods</a></li>
+</ul>
+</p>
 
 <hr/><p style="background-color:tomato;">Contact Rachel by 
 <a href="mailto:rachelalcraft@gmail.com"> email.</a>
