--- a/psugeometry.html
+++ b/psugeometry.html
@@ -7,7 +7,15 @@ td {border:1px solid MistyRose;background-color:AliceBlue;}
 </style></head>
 
 <body><h1>--- Rachel Alcraft, Bioinformatics ---</h1>
-<p style="background-color:tomato;"><a href='index.html' title='Home' target='_self'>Home</a> - PsuGeometry</p><hr/>
+<p style="background-color:tomato;">
+   <a href='index.html' title='Home' target='_self'>Home</a>
+~ <a href='citing.html' title='Citing' target='_self'>Citing</a>
+~ <a href='psubirkbeck.html' title='PsuBirkbeck' target='_self'>PsuBirkbeck</a>
+~ <a href='psugeometry.html' title='PsuGeometry' target='_self'>PsuGeometry</a>
+~ <a href='psudensity.html' title='PsuDensity' target='_self'>PsuDensity</a>
+~ <a href='densityflight.html' title='DensityFlight' target='_self'>DensityFlight</a>
+</p>
+
 <h2>PsuGeometry</h2>
 <hr/><h3>Installation</h3>
 <p>
@@ -27,7 +35,9 @@ td {border:1px solid MistyRose;background-color:AliceBlue;}
 <hr/><h3>Examples of reports</h3>
 <ul>
 <li><a href="PsuGeometry/examples/PSU-1tt8_rae-GEO.html">Correlation reports</a></li>
-<li><a href="PsuGeometry/examples/PSU-tau-GEO.html">Bimodal Tau example for each amino acid individually</a></li>
+<li><a href="PsuGeometry/examples/PSU-5nqo_close-GEO.html">Contact Maps</a></li>
+<li><a href="PsuGeometry/examples/PSU-1000-GEO.html">1000 Structures</a></li>
+<li><a href="PsuGeometry/examples/PSU-tau-GEO.html">Bimodal Tau example for each amino acid</a></li>
 <li><a href="PsuGeometry/examples/PSU-2cnq_bad-GEO.html">Correlation reports show structure with suspicious geoemtry</a></li>
 <li><a href="PsuGeometry/examples/PSU-2cnq_procheck1-GEO.html">Above structure with reports that match ProCheck</a></li>
 <li><a href="PsuGeometry/examples/PSU-1ejg_denpt_1ejg-GEO.html">Looking at the electron density against geoemtry and coordinates part 1</a></li>
