--- a/citing.html
+++ b/citing.html
@@ -18,7 +18,7 @@ td {border:1px solid MistyRose;background-color:AliceBlue;}
 
 <h2>Notes on how to cite this work</h2>
 At the moment, simply refer to the website<br/><br/>
-Alcraft, R.S (November 2020). Bioinformatics Code. https://rachelalcraft.github.io
+Rachel Alcraft (November 2020). Bioinformatics projects. https://rachelalcraft.github.io
 
 <hr/><p style="background-color:tomato;">Contact Rachel by 
 <a href="mailto:rachelalcraft@gmail.com"> email.</a>
