--- a/citing.html
+++ b/citing.html
@@ -18,8 +18,8 @@ td {border:1px solid MistyRose;background-color:AliceBlue;}
 
 <h2>Notes on how to cite this work</h2>
 At the moment, simply refer to the website and projects<br/><br/>
-Rachel Alcraft (November 2020). Bioinformatics projects. https://rachelalcraft.github.io
-Rachel Alcraft and Mark A. Williams (September 2020). Birkbeck MSc Thesis. https://rachelalcraft.github.io/psubirkbeck.html
+Rachel Alcraft and Mark A. Williams (September 2020). Birkbeck MSc Thesis. https://rachelalcraft.github.io/psubirkbeck.html<br/>
+Rachel Alcraft (November 2020). Bioinformatics projects. https://rachelalcraft.github.io<br/>
 <hr/><p style="background-color:tomato;">Contact Rachel by 
 <a href="mailto:rachelalcraft@gmail.com"> email.</a>
 - Return to Rachel's
