--- a/citing.html
+++ b/citing.html
@@ -19,7 +19,7 @@ td {border:1px solid MistyRose;background-color:AliceBlue;}
 <h2>Notes on how to cite this work</h2>
 At the moment, simply refer to the website and projects<br/><br/>
 Rachel Alcraft and Mark A. Williams (September 2020). Birkbeck MSc Thesis. <a href='psubirkbeck.html' title='PsuBirkbeck' target='_self'>https://rachelalcraft.github.io/psubirkbeck.html</a><br/>
-Rachel Alcraft (November 2020). Bioinformatics projects. <a href='psubirkbeck.html' title='index.html' target='_self'>https://rachelalcraft.github.io/</a><br/>
+Rachel Alcraft (November 2020). Bioinformatics projects. <a href='index.html' title='Home' target='_self'>https://rachelalcraft.github.io/</a><br/>
 <hr/><p style="background-color:tomato;">Contact Rachel by 
 <a href="mailto:rachelalcraft@gmail.com"> email.</a>
 - Return to Rachel's
