--- a/index.html
+++ b/index.html
@@ -26,11 +26,10 @@ td {border:1px solid MistyRose;background-color:AliceBlue;}
 <h2>Protein Structure Utility - Birkbeck MSc</h2>
 <p>This website and database was developed as part of an MSc thesis in Bioinformatics and Systems Biology (2020), supervisor <a href="http://people.cryst.bbk.ac.uk/~ubcg66a/">Mark Williams</a><br/>
 The database contains 3434 high resolution structures with resolution <= 1.3Å and 2697 structures from 2019 > 1.3Å<br/>
-The website allows production of geometric plots and statistical analyses using these structures and selected criteria. <br/>
-A highlight is the demonstration of the <a href="PsuBirkbeck/examples/bimodaltau.html">bimodal nature of tau.</a></br></br>
-
-PSU Birkbeck help and documentation is <a href="psubirkbeck.html">here</a></br>
-The Website hosted on the Birkbeck College servers is <a href="https://student.cryst.bbk.ac.uk/~ab002/thesis.html">here</a></br>
+The website allows production of geometric plots and statistical analyses using these structures and selected criteria. <br/></br>
+PSU Birkbeck help and documentation is <a href="psubirkbeck.html">here</a></br><br/>
+The Website hosted on the Birkbeck College servers is <a href="https://student.cryst.bbk.ac.uk/~ab002/thesis.html">here</a></br></br>
+A highlight is the demonstration of the <a href="PsuBirkbeck/examples/bimodaltau.html">bimodal nature of tau.</a></br>
 </p>
 <hr/>
 <h2>PsuGeometry</h2>
