--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang="en"><head>
-<link rel="icon" href="/Images/atom.png">
+<link rel="icon" href="Images/atom.png">
 <title>Rachel Alcraft</title>
 <style> 
 body {text-align:left;background-color:LightSteelBlue ;} 
