--- a/psugeometry.html
+++ b/psugeometry.html
@@ -1,10 +1,37 @@
-<!DOCTYPE html><html lang="en"><head><link rel="icon" href="/Images/atom.png"><title>Rachel Alcraft</title>
-<style> 
+<!DOCTYPE html><html lang="en"><head><link rel="icon" href="Images/atom.png"><title>Rachel Alcraft</title>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
 body {text-align:left;background-color:LightSteelBlue ;} 
 img {width:95% }
 table {font-size:0.8vw;width:95%;table-layout:fixed;display:table;margin:0 auto;background-color:LightSteelBlue ;} 
 td {border:1px solid MistyRose;background-color:AliceBlue;}
-</style></head>
+.collapsible {
+  background-color: MediumSlateBlue;
+  color: white;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+}
+
+.active, .collapsible:hover {
+  background-color: LightSeaGreen;
+}
+
+.content {
+  padding: 0 18px;
+  display: none;
+  overflow: hidden;
+  background-color: #f1f1f1;
+}
+</style>
+</head>
+<body>
 
 <body><h1>--- Rachel Alcraft, Bioinformatics ---</h1>
 <p style="background-color:tomato;">
@@ -16,24 +43,47 @@ td {border:1px solid MistyRose;background-color:AliceBlue;}
 ~ <a href='densityflight.html' title='DensityFlight' target='_self'>DensityFlight</a>
 </p>
 
-<h2>PsuGeometry</h2>
-<hr/><h3>Installation</h3>
-<p>
-</p>
-<hr/><h3>Running reports: level 1 (easy)</h3>
-<p>
-</p>
-<hr/><h3>Running reports: level 2 (advanced)</h3>
-<p>
-</p>
-<hr/><h3>Running reports: level 3 (expert)</h3>
-<p>
-</p>
-<hr/><h3>Class library and code documentation</h3>
-<p>
-</p>
-<hr/><h3>Examples of reports</h3>
+<hr/>
+<p>Installation</p>
+<button type="button" class="collapsible">Dependencies</button>
+<div class="content">
+  <p>
+The library relies on these Bioinformatics librararies:
 <ul>
+<li><a href="https://biopython.org/">BioPython</a> for protein structure coordinates</li>
+<li><a href="https://pdb-eda.readthedocs.io/en/latest/tutorial.html">PDB EDA</a> for loading the electron density</li>
+<li><a href="https://ssbio.readthedocs.io/en/latest/instructions/dssp.html">DSSP</a> for asigning secondary structure</li>
+</ul>
+</p>
+</div>
+<button type="button" class="collapsible">Library installation</button>
+<div class="content">
+  <p>...</p>
+</div>
+<hr/>
+<p>Running Reports</p>
+<button type="button" class="collapsible">Level 1 (easy)</button>
+<div class="content">
+  <p>...</p>
+</div>
+<button type="button" class="collapsible">Level 2 (advanced)</button>
+<div class="content">
+  <p>...</p>
+</div>
+<button type="button" class="collapsible">Level 3 (expert)</button>
+<div class="content">
+  <p>...</p>
+</div>
+<hr/>
+<p>Examples</p>
+<button type="button" class="collapsible">Available reports</button>
+<div class="content">
+  <p>...</p>
+</div>
+<button type="button" class="collapsible">Sample reports</button>
+<div class="content">
+  <p>
+  <ul>
 <li><a href="PsuGeometry/examples/PSU-1tt8_rae-GEO.html">Correlation reports</a></li>
 <li><a href="PsuGeometry/examples/PSU-5nqo_close-GEO.html">Contact Maps</a></li>
 <li><a href="PsuGeometry/examples/PSU-1000-GEO.html">1000 Structures</a></li>
@@ -43,22 +93,43 @@ td {border:1px solid MistyRose;background-color:AliceBlue;}
 <li><a href="PsuGeometry/examples/PSU-1ejg_denpt_1ejg-GEO.html">Looking at the electron density against geoemtry and coordinates part 1</a></li>
 <li><a href="PsuGeometry/examples/PSU-5nqo_data_5nqo-GEO.html">Looking at the electron density against geoemtry and coordinates part 2</a></li>
 </ul>
-<p>
-The library relies on these Bioinformatics librararies:
-<ul>
-<li><a href="https://biopython.org/">BioPython</a> for protein structure coordinates</li>
-<li><a href="https://pdb-eda.readthedocs.io/en/latest/tutorial.html">PDB EDA</a> for loading the electron density</li>
-<li><a href="https://ssbio.readthedocs.io/en/latest/instructions/dssp.html">DSSP</a> for asigning secondary structure</li>
-</ul>
-</p>
-</p>
+  </p>
+</div>
 <hr/>
-
-<hr/><p style="background-color:tomato;">Contact Rachel by 
+<p>Code documentation</p>
+<button type="button" class="collapsible">Class library</button>
+<div class="content">
+  <p>...</p>
+</div>
+<button type="button" class="collapsible">Test scripts</button>
+<div class="content">
+  <p>...</p>
+</div>
+<hr/>
+<p style="background-color:tomato;">Contact Rachel by 
 <a href="mailto:rachelalcraft@gmail.com"> email.</a>
 - Return to Rachel's
 <a href='https://rachelalcraft.github.io' title='rachelalcraft.github.io' target='_self'>home page</a> - 
 Notes on citations <a href="citing.html">here</a></br>
 </p>
 <hr/>
+
+<script>
+var coll = document.getElementsByClassName("collapsible");
+var i;
+
+for (i = 0; i < coll.length; i++) {
+  coll[i].addEventListener("click", function() {
+    this.classList.toggle("active");
+    var content = this.nextElementSibling;
+    if (content.style.display === "block") {
+      content.style.display = "none";
+    } else {
+      content.style.display = "block";
+    }
+  });
+}
+</script>
+
 </body>
+</html>
