--- a/psugeometry.html
+++ b/psugeometry.html
@@ -8,7 +8,7 @@ img {width:95% }
 table {font-size:0.8vw;width:95%;table-layout:fixed;display:table;margin:0 auto;background-color:LightSteelBlue ;} 
 td {border:1px solid MistyRose;background-color:AliceBlue;}
 .collapsible {
-  background-color: MediumSlateBlue;
+  background-color: cornflowerblue;
   color: white;
   cursor: pointer;
   padding: 18px;
@@ -20,7 +20,7 @@ td {border:1px solid MistyRose;background-color:AliceBlue;}
 }
 
 .active, .collapsible:hover {
-  background-color: LightSeaGreen;
+  background-color: DeepSkyBlue;
 }
 
 .content {
