--- a/psugeometry.html
+++ b/psugeometry.html
@@ -9,7 +9,7 @@ table {font-size:0.8vw;width:95%;table-layout:fixed;display:table;margin:0 auto;
 td {border:1px solid MistyRose;background-color:AliceBlue;}
 .collapsible {
   background-color: cornflowerblue;
-  color: white;
+  color: AliceBlue;
   cursor: pointer;
   padding: 18px;
   width: 100%;
@@ -64,7 +64,12 @@ The library relies on these Bioinformatics librararies:
 <p>Running Reports</p>
 <button type="button" class="collapsible">Level 1 (easy)</button>
 <div class="content">
-  <p>...</p>
+  <p>
+    <ul>
+	<li><a href="https://github.com/RachelAlcraft/PsuGeometry/blob/master/PsuGeometry/tests/test_Level1_SimpleCorrelations.py">Simple Correlations test script</a></li>
+<br/><a href="PsuGeometry/examples/PSU-SimpleCorr-GEO.html">Results of Simple correlations test script</a>
+</ul>
+  </p>
 </div>
 <button type="button" class="collapsible">Level 2 (advanced)</button>
 <div class="content">
@@ -99,7 +104,17 @@ The library relies on these Bioinformatics librararies:
 <p>Code documentation</p>
 <button type="button" class="collapsible">Class library</button>
 <div class="content">
-  <p>...</p>
+  <p>
+  <li><a href="https://github.com/RachelAlcraft/PsuGeometry/blob/master/PsuGeometry/CloseContact.py">CloseContact.py</a></li>
+<li><a href="https://github.com/RachelAlcraft/PsuGeometry/blob/master/PsuGeometry/GeoAtom.py">GeoAtom.py</a></li>
+<li><a href="https://github.com/RachelAlcraft/PsuGeometry/blob/master/PsuGeometry/GeoCalcs.py">GeoCalcs.py</a></li>
+<li><a href="https://github.com/RachelAlcraft/PsuGeometry/blob/master/PsuGeometry/GeoCsvReport.py">GeoCsvReport.py</a></li>
+<li><a href="https://github.com/RachelAlcraft/PsuGeometry/blob/master/PsuGeometry/GeoDensity.py">GeoDensity.py</a></li>
+<li><a href="https://github.com/RachelAlcraft/PsuGeometry/blob/master/PsuGeometry/GeoPdb.py">GeoPdb.py</a></li>
+<li><a href="https://github.com/RachelAlcraft/PsuGeometry/blob/master/PsuGeometry/GeoPdbReport.py">GeoPdbReport.py</a></li>
+<li><a href="https://github.com/RachelAlcraft/PsuGeometry/blob/master/PsuGeometry/GeoReport.py">GeoReport.py</a> This is the only class you will interact with.</li>
+</ul>
+  </p>
 </div>
 <button type="button" class="collapsible">Test scripts</button>
 <div class="content">
