--- a/psugeometry.html
+++ b/psugeometry.html
@@ -4,9 +4,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {text-align:left;background-color:LightSteelBlue ;} 
-img {width:95% }
-table {font-size:0.8vw;width:95%;table-layout:fixed;display:table;margin:0 auto;background-color:LightSteelBlue ;} 
-td {border:1px solid MistyRose;background-color:AliceBlue;}
+img {width:98% }
+table {width:98%;table-layout:fixed;display:table;margin:0 auto;background-color:Snow ;} 
+td {border:1px solid Snow;background-color:White;}
 .collapsible {
   background-color: cornflowerblue;
   color: AliceBlue;
@@ -65,19 +65,69 @@ The library relies on these Bioinformatics librararies:
 <button type="button" class="collapsible">Level 1 (easy)</button>
 <div class="content">
   <p>
-    <ul>
-	<li><a href="https://github.com/RachelAlcraft/PsuGeometry/blob/master/PsuGeometry/tests/test_Level1_SimpleCorrelations.py">Simple Correlations test script</a></li>
-<br/><a href="PsuGeometry/examples/PSU-SimpleCorr-GEO.html">Results of Simple correlations test script</a>
+  <table>
+  <tr>
+	<th>Report Description</th>
+  <th>Report Code</th>
+  <th>Report Example</th>
+  </tr>
+  <tr>
+  <td>A simple correlation report</td>
+  <td><a href="https://github.com/RachelAlcraft/PsuGeometry/blob/master/PsuGeometry/tests/test_Level1_SimpleCorrelations.py">Code</a></td>
+  <td><a href="PsuGeometry/examples/PSU-SimpleCorr-GEO.html">Example</a></td>
+  </tr>
+    <tr>
+  <td>A predefined report</td>
+  <td><a href="https://github.com/RachelAlcraft/PsuGeometry/blob/master/PsuGeometry/tests/test_Level1_predefinedReport.py">Code</a></td>
+  <td><a href="PsuGeometry/examples/PSU-1tt8_rae-GEO.html">Example</a></td>
+  </tr>
+  </table>  
 </ul>
   </p>
 </div>
 <button type="button" class="collapsible">Level 2 (advanced)</button>
 <div class="content">
-  <p>...</p>
+  <p>
+    <table>
+  <tr>
+	<th>Report Description</th>
+  <th>Report Code</th>
+  <th>Report Example</th>
+  </tr>
+  <tr>
+  <td>Using density 2Fo-Fc as a hue in a correlation report</td>
+  <td><a href="https://github.com/RachelAlcraft/PsuGeometry/blob/master/PsuGeometry/tests/test_Level2_densityHue.py">Code</a></td>
+  <td><a href="PsuGeometry/examples/PSU-densityhue-GEO">Example</a></td>
+  </tr>
+    <tr>
+  <td>Using geometric measures as a hue in a geometric correlatio</td>
+  <td><a href="https://github.com/RachelAlcraft/PsuGeometry/blob/master/PsuGeometry/tests/test_Level2_geometricHue.py">Code</a></td>
+  <td><a href="PsuGeometry/examples/PSU-geohue-GEO.html">Example</a></td>
+  </tr>
+<tr>
+  <td>Analysing a pdb structure in more detail</td>
+  <td><a href="https://github.com/RachelAlcraft/PsuGeometry/blob/master/PsuGeometry/tests/test_Level2_onePdbAnalysis.py">Code</a></td>
+  <td><a href="PsuGeometry/examples/PSU-singleppdb_6xe9-GEO.html">Example</a></td>
+  </tr>  
+  </table> 
+  </p>
 </div>
 <button type="button" class="collapsible">Level 3 (expert)</button>
 <div class="content">
-  <p>...</p>
+  <p>
+    <table>
+  <tr>
+	<th>Report Description</th>
+  <th>Report Code</th>
+  <th>Report Example</th>
+  </tr>
+  <tr>
+  <td>Serialising to file and back for memry - 1000 structures</td>
+  <td><a href="https://github.com/RachelAlcraft/PsuGeometry/blob/master/PsuGeometry/tests/test_Level3_1000.py">Code</a></td>
+  <td><a href="PsuGeometry/examples/PSU-1000-GEO.html">Example</a></td>
+  </tr>  
+  </table>  
+  </p>
 </div>
 <hr/>
 <p>Examples</p>
