--- a/psugeometry.html
+++ b/psugeometry.html
@@ -50,9 +50,9 @@ td {border:1px solid Snow;background-color:White;}
   <p>
 The library relies on these Bioinformatics librararies:
 <ul>
-<li><a href="https://biopython.org/">BioPython</a> for protein structure coordinates</li>
-<li><a href="https://pdb-eda.readthedocs.io/en/latest/tutorial.html">PDB EDA</a> for loading the electron density</li>
-<li><a href="https://ssbio.readthedocs.io/en/latest/instructions/dssp.html">DSSP</a> for asigning secondary structure</li>
+<li><a href="https://biopython.org/">BioPython</a> for protein structure coordinates. (Cock et al, 2009; Hamelryck et al, 2003)</li>
+<li><a href="https://pdb-eda.readthedocs.io/en/latest/tutorial.html">PDB EDA</a> for loading the electron density. (Yao et al, 2019)</li>
+<li><a href="https://ssbio.readthedocs.io/en/latest/instructions/dssp.html">DSSP</a> for asigning secondary structure. (Joosten et al, 2015; Kabsch & Sander, 1983)</li>
 </ul>
 </p>
 </div>
@@ -170,6 +170,13 @@ The library relies on these Bioinformatics librararies:
 <div class="content">
   <p>...</p>
 </div>
+<hr/>
+<h3>References</h3>
+<p>Cock, P. J. A., Antao, T., Chang, J. T., Chapman, B. A., Cox, C. J., Dalke, A., … De Hoon, M. J. L. (2009). Biopython: Freely available Python tools for computational molecular biology and bioinformatics. Bioinformatics, 25(11), 1422–1423. https://doi.org/10.1093/bioinformatics/btp163</p>
+<p>Hamelryck, T., & Manderick, B. (2003). PDB file parser and structure class implemented in Py-thon. Bioinformatics, 19(17), 2308–2310. https://doi.org/10.1093/bioinformatics/btg299</p>
+<p>Joosten, R. P., Te Beek, T. A. H., Krieger, E., Hekkelman, M. L., Hooft, R. W. W., Schneider, R., Vriend, G. (2011). A series of PDB related databases for everyday needs. Nucleic Ac-ids Research, 39(SUPPL. 1), 411–419. https://doi.org/10.1093/nar/gkq1105</p>
+<p>Kabsch, W., & Sander, C. (1983). Dictionary of Protein Secondary Structure: Pattern Recogni-tion of Hydrogen-Bonded and Geometrical Features. Biopolymers, 22, 2577–2637.</p>
+<p>Yao, S., & Moseley, H. N. B. (2019). A chemical interpretation of protein electron density maps in the worldwide protein data bank Software and full results available at : https://www.biorxiv.org/content/10.1101/613109v1</p>
 <hr/>
 <p style="background-color:tomato;">Contact Rachel by 
 <a href="mailto:rachelalcraft@gmail.com"> email.</a>
