--- a/psugeometry.html
+++ b/psugeometry.html
@@ -62,7 +62,7 @@ td {border:1px solid Snow;background-color:White;word-wrap:break-word;}
 You can define any geeomtric measures you like based on the standard atom naming of protein structures: these will be either distances (eg N:CA), angles (eg N:CA:C) or dihedrals (eg N:CA:C:N+1).
 You are not limited to standard geeomtric measures: you can correlate N:C-3 against CA:CB+1 if you so wish 
 (distance between N of the reference residue and C 3 residues back against distance between CA of the reference residue and 1 CB forwards).</p>
-<p>The library includes the ability to view a wide variety of hues for thse measures, from other geoemtric measures for an extra dimension, to bfactors, amino acid, and most uniquely, electron density.</p>
+<p>The library includes the ability to view a wide variety of hues for these measures, from other geoemtric measures for an extra dimension, to bfactors, amino acid, and most uniquely, electron density.</p>
 <p>There is also the ability to look directly at the electron density (e.g. x,y,z or c,r,s coordinates against bfactor or 2FoFc) and to explore data in the pdb structures.
 For example, you can correlate the electron density of the atoms against the number of electrons in the atoms, or the bfactor aginast the secondary structure</p>
 <hr/>
