--- a/psugeometry.html
+++ b/psugeometry.html
@@ -55,6 +55,8 @@ td {border:1px solid Snow;background-color:White;word-wrap:break-word;}
 </p>
 
 <hr/>
+<h1>PSU Geometry</h1>
+<hr/>
 <h3>Library Description</h3>
 <p>The PsuGeometry library is designed to make producing geoemetric and data reports of protein structures simple, powerful and beautiful.</p>
 <p>Protein structures and electron density matrices are downloaded from the Protein Databank in Europe (Velankar et al, 2009).<br/> Alternatively manual or edited pdbs can be used by having the files in the same directory as the pdb/electron density files.</p>
@@ -67,7 +69,7 @@ You are not limited to standard geeomtric measures: you can correlate N:C-3 agai
 For example, you can correlate the electron density of the atoms against the number of electrons in the atoms, or the bfactor aginast the secondary structure</p>
 <hr/>
 <h3>Each Plot Type</h3>
-<button type="button" class="collapsible">Available plots</button>
+<button type="button" class="collapsible">An example of each available plot</button>
 <div class="content">
 <table>
 <tr><th>1.Scattter Plot</th><th>2.Probability Density Plot</th><th>3.Histogram</th></tr>
