--- a/lessonspaper.html
+++ b/lessonspaper.html
@@ -46,6 +46,10 @@ The following items are supplementary data for the paper as detailed in the Supp
 --
 <a href="https://github.com/RachelAlcraft/PsuGeometry/blob/master/PsuGeometry/Paper01/Results3_correlations.py">Code</a>
  </p>
+ <a href="PsuGeometry/Paper01/Results3_correlations_1i1w.html">Full results 1i1w</a>
+--
+<a href="https://github.com/RachelAlcraft/PsuGeometry/blob/master/PsuGeometry/Paper01/Results3_correlations1i1w.py">Code 1i1w</a>
+ </p>
 </li>
 
 <li>
