--- a/psudensity.html
+++ b/psudensity.html
@@ -4,7 +4,17 @@ body {text-align:left;background-color:LightSteelBlue ;}
 img {width:95% }
 table {font-size:0.8vw;width:95%;table-layout:fixed;display:table;margin:0 auto;background-color:LightSteelBlue ;} 
 td {border:1px solid MistyRose;background-color:AliceBlue;}
-</style></head>
+</style>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HBH4HKT0NM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HBH4HKT0NM');
+</script>
+</head>
 
 <body><h1>--- Rachel Alcraft, Bioinformatics ---</h1>
 <p style="background-color:tomato;">
