--- a/psugeometry.html
+++ b/psugeometry.html
@@ -41,6 +41,15 @@ td {border:1px solid Snow;background-color:White;word-wrap:break-word;}
   background-color: #f1f1f1;
 }
 </style>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HBH4HKT0NM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HBH4HKT0NM');
+</script>
 </head>
 <body>
 
