Improved titles for analytics

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang="en"><head>
 <link rel="icon" href="Images/atom.png">
-<title>Rachel Alcraft</title>
+<title>Rachel Alcraft Home</title>
 <style> 
 body {text-align:left;background-color:LightSteelBlue ;} 
 img {width:95% }
