--- a/psubirkbeck.html
+++ b/psubirkbeck.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="en"><head><link rel="icon" href="Images/atom.png"><title>Rachel Alcraft</title>
+<!DOCTYPE html><html lang="en"><head><link rel="icon" href="Images/atom.png"><title>Rachel Alcraft Bbk</title>
 <style> 
 body {text-align:left;background-color:LightSteelBlue ;} 
 img {width:95% }
