--- a/psugeometry.html
+++ b/psugeometry.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="en"><head><link rel="icon" href="Images/atom.png"><title>Rachel Alcraft</title>
+<!DOCTYPE html><html lang="en"><head><link rel="icon" href="Images/atom.png"><title>Rachel Alcraft PsuGeometry</title>
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
