--- a/psubirkbeck.html
+++ b/psubirkbeck.html
@@ -24,6 +24,7 @@ td {border:1px solid MistyRose;background-color:AliceBlue;}
 ~ <a href='psugeometry.html' title='PsuGeometry' target='_self'>PsuGeometry</a>
 ~ <a href='psudensity.html' title='PsuDensity' target='_self'>PsuDensity</a>
 ~ <a href='densityflight.html' title='DensityFlight' target='_self'>DensityFlight</a>
+~ <a href='psumultivarse.html' title='PsuMultivarse' target='_self'>PsuMultivarse</a>
 </p>
 
 <h2>Protein Structure Utility - Birkbeck MSc</h2>
