--- a/psugeometry.html
+++ b/psugeometry.html
@@ -61,6 +61,7 @@ td {border:1px solid Snow;background-color:White;word-wrap:break-word;}
 ~ <a href='psugeometry.html' title='PsuGeometry' target='_self'>PsuGeometry</a>
 ~ <a href='psudensity.html' title='PsuDensity' target='_self'>PsuDensity</a>
 ~ <a href='densityflight.html' title='DensityFlight' target='_self'>DensityFlight</a>
+~ <a href='psumultivarse.html' title='PsuMultivarse' target='_self'>PsuMultivarse</a>
 </p>
 
 <hr/>
