--- a/lessonspaper.html
+++ b/lessonspaper.html
@@ -45,10 +45,12 @@ The following items are supplementary data for the paper as detailed in the Supp
 
 <li>
 <p>S2. Figure 1. Bimodal tau<br/>
+<a href="PsuGeometry/Paper01/Results2_tau_histograms.html">Histogram per Amini Acid</a><br/>
+<a href="PsuGeometry/Paper01/Results2_tau_scatter.html">Scatter plots with dssp hue</a><br/>
 <a href="PsuGeometry/Paper01/Results2_tau_psi_prob.html">Psi/Tau Probability</a><br/>
 <a href="PsuGeometry/Paper01/Results2_tau_phi_prob.html">Phi/Tau Probability</a><br/>
 <a href="PsuGeometry/Paper01/Results2_tau_omega_prob.html">Omega/Tau Probability</a><br/>
-<a href="PsuGeometry/Paper01/Results2_tau_scatter.html">Scatter with dssp hue</a><br/>
+<a href="PsuGeometry/Paper01/Results2_tau_nc_prob.html">N:C/Tau Probability</a><br/>
 --
 <a href="https://github.com/RachelAlcraft/PsuGeometry/blob/master/PsuGeometry/Paper01/Results2_bimodaltau.py">Code</a>
  </p>
