--- a/lessonspaper.html
+++ b/lessonspaper.html
@@ -45,7 +45,7 @@ The following items are supplementary data for the paper as detailed in the Supp
 
 <li>
 <p>S2. Figure 1. Bimodal tau<br/>
-<a href="PsuGeometry/Paper01/Results2_tau_histograms.html">Histogram per Amini Acid</a><br/>
+<a href="PsuGeometry/Paper01/Results2_tau_histograms.html">Histogram per Amino Acid</a><br/>
 <a href="PsuGeometry/Paper01/Results2_tau_scatter.html">Scatter plots with dssp hue</a><br/>
 <a href="PsuGeometry/Paper01/Results2_tau_psi_prob.html">Psi/Tau Probability</a><br/>
 <a href="PsuGeometry/Paper01/Results2_tau_phi_prob.html">Phi/Tau Probability</a><br/>
